Execute pet storing from the central wallet and add events to contract for debuging
